--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,13 +51,13 @@ dependencies {
     implementation("androidx.room:room-runtime:2.4.2")
     kapt("androidx.room:room-compiler:2.4.2")
     implementation("androidx.room:room-ktx:2.4.2")
+
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
 
-    def lifecycle_version = "2.5.0-alpha04"
-    // ViewModel
-    implementation("androidx.lifecycle:lifecycle.viewmodel-ktx:$lifecycle_version")
+    def lifecycle_version = "2.5.0-rc01"
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
 
     //LiveData
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
